# PEA-Projekt-4

./: CMakeLists.txt  main.cpp
Abstractions/: IAtspAlgorithm.ixx  IDataProvider.ixx
Algorithms/: GeneticAlgorithm.ixx  NN.ixx
Data/: FileDataProvider.ixx  RandomDataGenerator.ixx
Infrastructure/: AlgorithmTester.ixx  CsvWriter.ixx
Models/: AlgorithmResult.ixx  GAConfig.ixx  TestData.ixx
Python/: bnb_plot_generator.py  ga_plot_generator.py  plot_generator.py  wyniki_mutacja.csv  wyniki_populacja.csv  wyniki_size.csv
Sprawozdanie/: Projekt3_Kwiek.tex  Projekt4_GA.aux  Projekt4_GA.fdb_latexmk  Projekt4_GA.fls  Projekt4_GA.out  Projekt4_GA.tex  Projekt4_GA.toc
